--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         many more features implemented
                     </p>
                     <div class="project-links">
-                        <a href="https://github.com/ecommerce-backend/" style="color: white;" target="_blank">
+                        <a href="https://github.com/Phani-stack/ecommerce-backend/" style="color: white;" target="_blank">
                             <p>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -229,7 +229,7 @@
                             </p>
                         </a>
 
-                        <a href="https://github.com/ecommerce-backend/" style="color: white;" target="_blank">
+                        <a href="https://github.com/Phani-stack/ecommerce-backend/" style="color: white;" target="_blank">
                             <p>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
